--- a/pages/notes.html
+++ b/pages/notes.html
@@ -102,7 +102,7 @@
               <span class="tag__square"></span>
             </div>
           </div>
-          <div class="note__content hidden">
+          <div class="note__content">
             <div class="note__description">
               <p>This is a card and it was created Manually</p>
             </div>
