Add responsive to home page - everything

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>        
           </div>
           <div class="upper__card">
-            <div class="upper__card-item">
+            <div class="upper__card-item card-styles">
               <div class="upper__card-item-picture">
                 <img src="./assets/img/card-resize-cards.png" alt="resizable-cards-image">
               </div>
@@ -68,7 +68,7 @@
           <div class="downwards__leftside grid">
             <div class="downwards__leftside-upper grid">
               <div class="downwards__leftside-upper__leftside">
-                <div class="downwards__leftside-upper__leftside-card-item">
+                <div class="downwards__leftside-upper__leftside-card-item card-styles">
                   <div class="downwards__leftside-upper__leftside-card-item__toptext">
                     <p>ready to start?</p>
                   </div>
@@ -79,26 +79,26 @@
                 </div>
               </div>
               <div class="downwards__leftside-upper__rightside">
-                <div class="downwards__leftside-upper__rightside-card-item">
+                <div class="downwards__leftside-upper__rightside-card-item card-styles">
                   <img src="./assets/img/card-mobile-version.png" alt="mobile-version-image">
                 </div>
               </div>
             </div>
             <div class="downwards__leftside-downwards grid">
               <div class="downwards__leftside-downwards__leftside">
-                <div class="downwards__leftside-downwards__leftside-card-item">
+                <div class="downwards__leftside-downwards__leftside-card-item card-styles">
                   <img src="./assets/img/card-collapse-fun.png" alt="collapse-forfun-image">
                 </div>
               </div>
               <div class="downwards__leftside-downwards__rightside">
-                <div class="downwards__leftside-downwards__rightside-card-item">
+                <div class="downwards__leftside-downwards__rightside-card-item card-styles">
                   <img src="./assets/img/card-change-theme.png" alt="change-colors-image">
                 </div>
               </div>
             </div>
           </div>
           <div class="downwards__rightside-card">
-            <div class="downwards__rightside-card-item">
+            <div class="downwards__rightside-card-item card-styles">
               <img src="./assets/img/card-custom-layout.png" alt="card-layout">
             </div>
           </div>
