Update collapse for fun with animation

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <div class="downwards__leftside-downwards grid">
               <div class="downwards__leftside-downwards__leftside">
                 <div class="downwards__leftside-downwards__leftside-card-item card-styles scale-up">
+                  <canvas id="gradient-canvas"></canvas>
                   <img src="./assets/img/card-collapse-fun.png" alt="collapse-forfun-image">
                 </div>
               </div>
@@ -122,5 +123,7 @@
           </div>
         </div>
       </div> -->
+
+      <script type="module" src="./js/home.js"></script>
 </body>
 </html>
