Update notes design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header" id="header">
     <nav class="nav">
       <a class="nav__logo-1">NN</a>
-      <div class="nav__menu" id="nav-menu"> 
+      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
             <a href="./pages/about.html" class="nav__link">
@@ -50,7 +50,7 @@
             <div class="upper__title-description">
               <p class="upper__description-item-1 capitalize">create notes fast. like now. really.</p>
               <p class="upper__description-item-2 capitalize">create notes fast. like now. really.</p>
-            </div>        
+            </div>
           </div>
           <div class="upper__card">
             <div class="upper__card-item card-styles scale-up">
@@ -75,12 +75,13 @@
                   <div class="downwards__leftside-upper__leftside-card-item__title">
                     <h3>everything will be set in seconds.</h3>
                   </div>
-                  <button class="downwards__leftside-upper__leftside-card-item__button">start<img src="./assets/icons/play.svg" alt="start-icon"></button>
+                  <button onclick="window.location.href='./pages/notes.html'" class="downwards__leftside-upper__leftside-card-item__button">start<img src="./assets/icons/play.svg" alt="start-icon"></button>
                 </div>
               </div>
               <div class="downwards__leftside-upper__rightside">
                 <div class="downwards__leftside-upper__rightside-card-item card-styles scale-up">
                   <img src="./assets/img/card-mobile-version.png" alt="mobile-version-image">
+                  <img src="./assets/img/phone.png" alt="phone-image">
                 </div>
               </div>
             </div>
@@ -94,6 +95,11 @@
               <div class="downwards__leftside-downwards__rightside">
                 <div class="downwards__leftside-downwards__rightside-card-item card-styles scale-up">
                   <img src="./assets/img/card-change-theme.png" alt="change-colors-image">
+                  <div class="circles">
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                    <span class="circle"></span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -109,7 +115,7 @@
   </main>
 
   <!-- Creation of complex grid layout -->
-  
+
 
   <!-- <div class="home__container">
         <div class="home__header">
