--- a/pages/notes.html
+++ b/pages/notes.html
@@ -5,11 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/notes.css">
-  <link rel="stylesheet" href="../css/bar.css">
+  <link rel="stylesheet" href="../css/navBar.css">
   <link rel="stylesheet" href="../css/root.css">
   <title>Note App</title>
 </head>
 <body>
+
+  <div class="note__creator-activate">
+    <div class="button-plus">
+      <img src="../assets/icons/plus-circle.svg" alt="plus-icon">
+    </div>
+  </div>
+
   <div class="note__creator hidden">
     <div class="note__form">
       <div class="note__content">
@@ -60,26 +67,25 @@
 
   <header class="header" id="header">
     <nav class="nav">
-      <a href="../index.html" class="nav__logo">NN</a>
-      <div class="nav__menu" id="nav-menu"> 
+      <a href="../index.html" class="nav__logo-1">NN</a>
+      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="./about.html" class="nav__link">
+            <a href="./pages/about.html" class="nav__link">
               about
             </a>
           </li>
           <li class="nav__item">
-            <a href="./donations.html" class="nav__link">
+            <a href="./pages/donations.html" class="nav__link">
               donations
             </a>
           </li>
           <div class="nav__link">
-            <a href="./login.html" class="button nav__button">
+            <a href="./pages/login.html" class="button nav__button">
               login
             </a>
           </div>
         </ul>
-        </button>
     </nav>
   </header>
 
@@ -112,7 +118,343 @@
                 <span class="note__tag">tag</span>
               </div>
               <div class="note__options">
-                <span>Options</span>
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
+              </div>
+            </div>
+          </div>   
+        </div>
+        <div class="note">
+          <div class="note__header">
+            <div class="note__title">
+              <p>Title</p>
+              <p>Date Created</p>
+            </div>     
+            <div class="tags__squares">
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+              <span class="tag__square"></span>
+            </div>
+          </div>
+          <div class="note__content">
+            <div class="note__description">
+              <p>This is a card and it was created Manually</p>
+            </div>
+  
+            <div class="note__footer">
+              <div class="note__tags">
+                <span class="note__tag">tag</span>
+              </div>
+              <div class="note__options">
+                <img src="../assets/icons/3-dots.svg" alt="3-dots">
               </div>
             </div>
           </div>   
