--- a/pages/notes.html
+++ b/pages/notes.html
@@ -71,17 +71,17 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="./pages/about.html" class="nav__link">
+            <a href="./about.html" class="nav__link">
               about
             </a>
           </li>
           <li class="nav__item">
-            <a href="./pages/donations.html" class="nav__link">
+            <a href="./donations.html" class="nav__link">
               donations
             </a>
           </li>
           <div class="nav__link">
-            <a href="./pages/login.html" class="button nav__button">
+            <a href="./login.html" class="button nav__button">
               login
             </a>
           </div>
