Update general settings

--- a/pages/notes.html
+++ b/pages/notes.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="note__creator-activate">
-    <div class="button-plus">
+    <div class="button-plus nav__button-plus">
       <img src="../assets/icons/plus-circle.svg" alt="plus-icon">
     </div>
   </div>
