--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/home.css">
   <link rel="stylesheet" href="./css/navBar.css">
   <link rel="stylesheet" href="./css/root.css">
@@ -113,6 +114,15 @@
       </div>
     </section>
   </main>
+
+
+  <footer id="footer" class="footer">
+    <div class="footer-section">
+      <p>@ All rights reserved NotiNotes App</p>
+      <p>Mateo Hernandez</p>
+      <p>Aura Marcela</p>
+    </div>
+  </footer>
 
   <!-- Creation of complex grid layout -->
 
