--- a/pages/donations.html
+++ b/pages/donations.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/root.css">
   <link rel="stylesheet" href="../css/navBar.css">
   <title>Donations</title>
@@ -32,5 +33,15 @@
         </ul>
     </nav>
   </header>
+
+
+  <footer id="footer" class="footer">
+    <div class="footer-section">
+      <p>@ All rights reserved NotiNotes App</p>
+      <p>Mateo Hernandez</p>
+      <p>Aura Marcela</p>
+    </div>
+  </footer>
+
 </body>
 </html>
