--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+  <!-- Diagonal purple -->
   <div class="diagonal-box"></div>
 
   <header class="header" id="header">
@@ -39,79 +40,63 @@
     </nav>
   </header>
 
+
+  <!-- Refactor -->
+
   <main id="main">
-    <section class="section_home">
-      <div class="content grid">
-        <div class="upper grid">
-          <div class="upper__title">
-            <div class="upper__title-title">
-              <h1 class="upper__title-item-1">NotiNotes</h1>
-              <h1 class="upper__title-item-2">NotiNotes</h1>
-            </div>
-            <div class="upper__title-description">
-              <p class="upper__description-item-1 capitalize">create notes fast. like now. really.</p>
-              <p class="upper__description-item-2 capitalize">create notes fast. like now. really.</p>
-            </div>
-          </div>
-          <div class="upper__card">
-            <div class="upper__card-item card-styles scale-up">
-              <div class="upper__card-item-picture">
-                <img src="./assets/img/card-resize-cards.png" alt="resizable-cards-image">
-              </div>
-              <div class="upper__card-item-content">
-                <p>watch trailer</p>
-                <p>more info.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="downwards grid">
-          <div class="downwards__leftside grid">
-            <div class="downwards__leftside-upper grid">
-              <div class="downwards__leftside-upper__leftside">
-                <div class="downwards__leftside-upper__leftside-card-item card-styles scale-up">
-                  <div class="downwards__leftside-upper__leftside-card-item__toptext">
-                    <p>ready to start?</p>
-                  </div>
-                  <div class="downwards__leftside-upper__leftside-card-item__title">
-                    <h3>everything will be set in seconds.</h3>
-                  </div>
-                  <button onclick="window.location.href='./pages/notes.html'" class="downwards__leftside-upper__leftside-card-item__button">start<img src="./assets/icons/play.svg" alt="start-icon"></button>
-                </div>
-              </div>
-              <div class="downwards__leftside-upper__rightside">
-                <div class="downwards__leftside-upper__rightside-card-item card-styles scale-up">
-                  <img src="./assets/img/card-mobile-version.png" alt="mobile-version-image">
-                  <img src="./assets/img/phone.png" alt="phone-image">
-                </div>
-              </div>
-            </div>
-            <div class="downwards__leftside-downwards grid">
-              <div class="downwards__leftside-downwards__leftside">
-                <div class="downwards__leftside-downwards__leftside-card-item card-styles scale-up">
-                  <canvas id="gradient-canvas"></canvas>
-                  <img src="./assets/img/card-collapse-fun.png" alt="collapse-forfun-image">
-                </div>
-              </div>
-              <div class="downwards__leftside-downwards__rightside">
-                <div class="downwards__leftside-downwards__rightside-card-item card-styles scale-up">
-                  <img src="./assets/img/card-change-theme.png" alt="change-colors-image">
-                  <div class="circles">
-                    <span class="circle"></span>
-                    <span class="circle"></span>
-                    <span class="circle"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="downwards__rightside-card">
-            <div class="downwards__rightside-card-item card-styles scale-up">
-              <img src="./assets/img/card-custom-layout.png" alt="card-layout">
-            </div>
-          </div>
+    <section class="section-grid grid">
+
+      <!-- Title -->
+      <div class="card card--title">
+        <h1>NotiNotes</h1>
+        <h1>NotiNotes</h1>
+        <p>create notes fast. like now. really.</p>
+        <p>create notes fast. like now. really.</p>
+      </div>
+
+      <!-- Resizable cards card -->
+      <div class="card card--resize flex">
+        <img src="./assets/img/card-resize-cards.png" alt="resizable-cards-image">
+        <div class="card--resize__content flex">
+          <p>watch trailer.</p>
+          <p>more info.</p>
         </div>
       </div>
+
+      <!-- Start now card -->
+      <div class="card card--start flex">
+        <p>ready to start?</p>
+        <h3>everything will be set in seconds.</h3>
+        <button class="capitalize" onclick="window.location.href='./pages/notes.html'" class="downwards__leftside-upper__leftside-card-item__button">start<img src="./assets/icons/play.svg" alt="start-icon"></button>
+      </div>
+
+      <!-- Mobile version card -->
+      <div class="card card--mobile flex">
+        <img src="./assets/img/card-mobile-version.png" alt="mobile-version-image">
+        <img src="./assets/img/phone.png" alt="phone-image">
+      </div>
+
+      <!-- Collapse for fun card -->
+      <div class="card card--collapse flex">
+        <canvas id="gradient-canvas"></canvas>
+        <img src="./assets/img/card-collapse-fun.png" alt="collapse-forfun-image">
+      </div>
+
+      <!-- Change colors for fun card -->
+      <div class="card card--colors flex">
+        <img src="./assets/img/card-change-theme.png" alt="change-colors-image">
+        <div class="card--colors__circle">
+          <span class="circle"></span>
+          <span class="circle"></span>
+          <span class="circle"></span>
+        </div>
+      </div>
+
+      <!-- Custom layout card -->
+      <div class="card card--layout flex">
+        <img src="./assets/img/card-custom-layout.png" alt="card-layout">
+      </div>
+
     </section>
   </main>
 
@@ -124,22 +109,6 @@
     </div>
   </footer>
 
-  <!-- Creation of complex grid layout -->
-
-
-  <!-- <div class="home__container">
-        <div class="home__header">
-          <div class="home__title">
-            <h1 class="home__title-item-1">NotiNotes</h1>
-            <h1 class="home__title-item-2">NotiNotes</h1>
-          </div>
-          <div class="home__description">
-            <p class="home__description-item-1 capitalize">create notes fast. like now. really.</p>
-            <p class="home__description-item-2 capitalize">create notes fast. like now. really.</p>
-          </div>
-        </div>
-      </div> -->
-
-      <script type="module" src="./js/home.js"></script>
+  <script type="module" src="./js/home.js"></script>
 </body>
 </html>
