--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
   </main>
 
 
+  <!-- The footer need to be redesigned -->
   <footer id="footer" class="footer">
-    <div class="footer-section">
       <p>@ All rights reserved NotiNotes App</p>
       <p>Mateo Hernandez</p>
       <p>Aura Marcela</p>
-    </div>
   </footer>
 
   <script type="module" src="./js/home.js"></script>
