Update animations grid layout home

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="section-grid grid">
 
       <!-- Title -->
-      <div class="card card--title">
+      <div class="card--title">
         <h1>NotiNotes</h1>
         <h1>NotiNotes</h1>
         <p>create notes fast. like now. really.</p>
