Update header on all pages

--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
 
   <header class="header" id="header">
     <nav class="nav">
-      <a href="#" class="nav__logo">NN</a>
+      <a class="nav__logo">NN</a>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#experience" class="nav__link"> notes </a>
+            <a href="./pages/notes.html" class="nav__link"> notes </a>
           </li>
           <li class="nav__item">
-            <a href="#portfolio" class="nav__link"> bloc </a>
+            <a href="./pages/" class="nav__link"> bloc </a>
           </li>
           <li class="nav__item">
-            <a href="#team" class="nav__link"> open-source </a>
+            <a href="./pages/" class="nav__link"> open-source </a>
           </li>
           <li class="nav__item">
-            <a href="#services" class="nav__link"> about </a>
+            <a href="./pages/donations.html" class="nav__link"> support </a>
+          </li>
+          <li class="nav__item">
+            <a href="./pages/about.html" class="nav__link"> about </a>
           </li>
 
           <div class="nav__link">
-            <a href="#footer" class="button nav__button"> login </a>
+            <a href="./pages/login.html" class="button nav__button"> login </a>
           </div>
         </ul>
 
@@ -112,7 +115,7 @@
   </main>
 
 
-  <!-- The footer need to be redesigned -->
+  <!-- The footer needs to be redesigned -->
   <footer id="footer" class="footer">
       <p>@ All rights reserved NotiNotes App</p>
       <p>Mateo Hernandez</p>
