--- a/pages/login.html
+++ b/pages/login.html
@@ -14,30 +14,39 @@
 
   <header class="header" id="header">
     <nav class="nav">
-      <a href="../index.html" class="nav__logo-1">NN</a>
+      <a href="../index.html" class="nav__logo">NN</a>
+
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="./notes.html" class="nav__link">
-              notes
-            </a>
+            <a href="./notes.html" class="nav__link"> notes </a>
           </li>
           <li class="nav__item">
-            <a href="./about.html" class="nav__link">
-              about
-            </a>
+            <a href="./pages/" class="nav__link"> bloc </a>
           </li>
           <li class="nav__item">
-            <a href="./donations.html" class="nav__link">
-              donations
-            </a>
+            <a href="./pages/" class="nav__link"> open-source </a>
           </li>
+          <li class="nav__item">
+            <a href="./donations.html" class="nav__link"> support </a>
+          </li>
+          <li class="nav__item">
+            <a href="./about.html" class="nav__link"> about </a>
+          </li>
+
           <div class="nav__link">
-            <a href="./login.html" class="button nav__button">
-              login
-            </a>
+            <a href="./login.html" class="button nav__button"> login </a>
           </div>
         </ul>
+
+        <div class="nav__close" id="nav__close">x</div>
+      </div>
+
+      <div class="nav__toggle" id="nav__toggle">
+        <img src="./assets/icons/menu.svg" alt="menu-logo" />
+      </div>
+
+      <div class="overlay hidden"></div>
     </nav>
   </header>
 
