--- a/pages/notes.html
+++ b/pages/notes.html
@@ -12,6 +12,44 @@
 </head>
 <body>
 
+  <header class="header" id="header">
+    <nav class="nav">
+      <a href="../index.html" class="nav__logo">NN</a>
+
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="./notes.html" class="nav__link"> notes </a>
+          </li>
+          <li class="nav__item">
+            <a href="./pages/" class="nav__link"> bloc </a>
+          </li>
+          <li class="nav__item">
+            <a href="./pages/" class="nav__link"> open-source </a>
+          </li>
+          <li class="nav__item">
+            <a href="./donations.html" class="nav__link"> support </a>
+          </li>
+          <li class="nav__item">
+            <a href="./about.html" class="nav__link"> about </a>
+          </li>
+
+          <div class="nav__link">
+            <a href="./login.html" class="button nav__button"> login </a>
+          </div>
+        </ul>
+
+        <div class="nav__close" id="nav__close">x</div>
+      </div>
+
+      <div class="nav__toggle" id="nav__toggle">
+        <img src="./assets/icons/menu.svg" alt="menu-logo" />
+      </div>
+
+      <div class="overlay hidden"></div>
+    </nav>
+  </header>
+
   <div class="note__creator-activate">
     <div class="button-plus nav__button-plus">
       <img src="../assets/icons/plus-circle.svg" alt="plus-icon">
@@ -65,30 +103,6 @@
       </div>
     </div>
   </div>
-
-  <header class="header" id="header">
-    <nav class="nav">
-      <a href="../index.html" class="nav__logo-1">NN</a>
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="./about.html" class="nav__link">
-              about
-            </a>
-          </li>
-          <li class="nav__item">
-            <a href="./donations.html" class="nav__link">
-              donations
-            </a>
-          </li>
-          <div class="nav__link">
-            <a href="./login.html" class="button nav__button">
-              login
-            </a>
-          </div>
-        </ul>
-    </nav>
-  </header>
 
   <main id="main">
     <section class="note__section">
