Update login design and responsive for all devices

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/root.css">
-  <link rel="stylesheet" href="../css/navBar.css">
-  <title>About</title>
-</head>
-<body>
-  <header class="header" id="header">
-    <nav class="nav">
-      <a href="../index.html" class="nav__logo">NN</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/root.css" />
+    <link rel="stylesheet" href="../css/navBar.css" />
+    <title>About</title>
+  </head>
+  <body>
+    <header class="header" id="header">
+      <nav class="nav">
+        <a href="../index.html" class="nav__logo">NN</a>
 
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="./notes.html" class="nav__link"> notes </a>
-          </li>
-          <li class="nav__item">
-            <a href="./pages/" class="nav__link"> bloc </a>
-          </li>
-          <li class="nav__item">
-            <a href="./pages/" class="nav__link"> open-source </a>
-          </li>
-          <li class="nav__item">
-            <a href="./donations.html" class="nav__link"> support </a>
-          </li>
-          <li class="nav__item">
-            <a href="./about.html" class="nav__link"> about </a>
-          </li>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="./notes.html" class="nav__link"> notes </a>
+            </li>
+            <li class="nav__item">
+              <a href="./pages/" class="nav__link"> bloc </a>
+            </li>
+            <li class="nav__item">
+              <a href="./pages/" class="nav__link"> open-source </a>
+            </li>
+            <li class="nav__item">
+              <a href="./donations.html" class="nav__link"> support </a>
+            </li>
+            <li class="nav__item">
+              <a href="./about.html" class="nav__link"> about </a>
+            </li>
 
-          <div class="nav__link">
-            <a href="./login.html" class="button nav__button"> login </a>
-          </div>
-        </ul>
+            <div class="nav__link">
+              <a href="./login.html" class="button nav__button"> login </a>
+            </div>
+          </ul>
 
-        <div class="nav__close" id="nav__close">x</div>
-      </div>
+          <div class="nav__close" id="nav__close">x</div>
+        </div>
 
-      <div class="nav__toggle" id="nav__toggle">
-        <img src="./assets/icons/menu.svg" alt="menu-logo" />
-      </div>
+        <div class="nav__toggle" id="nav__toggle">
+          <img src="../assets/icons/menu.svg" alt="menu-logo" />
+        </div>
 
-      <div class="overlay hidden"></div>
-    </nav>
-  </header>
+        <div class="overlay hidden"></div>
+      </nav>
+    </header>
 
-  <main>
-    <section>
-      <p>This site is being in active development. Expect the first version be released november 5.</p>
-      <p>Authors: Aura Marcela, Mateo Hernandez.</p>
-      <p>version: v1.0.0</p>
-      <p>status: beta</p>
-    </section>
-  </main>
+    <main>
+      <section>
+        <p>
+          This site is being in active development. Expect the first version be
+          released november 5.
+        </p>
+        <p>Authors: Aura Marcela, Mateo Hernandez.</p>
+        <p>version: v1.0.0</p>
+        <p>status: beta</p>
+      </section>
+    </main>
 
+    <footer id="footer" class="footer">
+      <p>@ All rights reserved NotiNotes App</p>
+      <p>Mateo Hernandez</p>
+      <p>Aura Marcela</p>
+    </footer>
 
-  <footer id="footer" class="footer">
-    <p>@ All rights reserved NotiNotes App</p>
-    <p>Mateo Hernandez</p>
-    <p>Aura Marcela</p>
-</footer>
-</body>
+    <script src="../js/navigation.js"></script>
+  </body>
 </html>
