--- a/pages/donations.html
+++ b/pages/donations.html
@@ -41,7 +41,7 @@
       </div>
 
       <div class="nav__toggle" id="nav__toggle">
-        <img src="./assets/icons/menu.svg" alt="menu-logo" />
+        <img src="../assets/icons/menu.svg" alt="menu-logo" />
       </div>
 
       <div class="overlay hidden"></div>
@@ -55,5 +55,6 @@
     <p>Aura Marcela</p>
   </footer>
 
+  <script src="../js/navigation.js"></script>
 </body>
 </html>
