--- a/pages/notes.html
+++ b/pages/notes.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="nav__toggle" id="nav__toggle">
-          <img src="./assets/icons/menu.svg" alt="menu-logo" />
+          <img src="../assets/icons/menu.svg" alt="menu-logo" />
         </div>
 
         <div class="overlay hidden"></div>
@@ -510,6 +510,7 @@
       <p>Aura Marcela</p>
     </footer>
 
+    <script src="../js/navigation.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="../js/notes.js"></script>
   </body>
