--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <p>Aura Marcela</p>
   </footer>
 
-  <script type="module" src="./js/home.js"></script>
+  <script src="./js/navigation.js"></script>
+  <script type="module" src="./js/gradientIm.js"></script>
 </body>
 </html>
