--- a/pages/notes.html
+++ b/pages/notes.html
@@ -176,7 +176,7 @@
               <img src="../assets/icons/3-dots.svg" alt="3-dots" />
             </div>
           </div>
-          
+
           <div class="note">
             <div class="note__upper flex">
               <h2>Title</h2>
@@ -210,7 +210,7 @@
     </footer>
 
     <script src="../js/navigation.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="../js/masonry.pkgd.min.js"></script>
     <script src="../js/notes.js"></script>
   </body>
 </html>
